// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generateApiDefinition should generate api definition for http endpoint with request and response body validation 1`] = `
{
  "components": {
    "securitySchemes": {
      "BearerAuth": {
        "bearerFormat": "JWT",
        "scheme": "bearer",
        "type": "http",
      },
      "FunctionKeyAuth": {
        "in": "header",
        "name": "x-functions-key",
        "type": "apiKey",
      },
    },
  },
  "info": {
    "description": undefined,
    "title": "Test API",
    "version": "1.0.0",
  },
  "openapi": "3.0.2",
  "paths": {
    "/person": {
      "post": {
        "operationId": "http-post-person",
        "parameters": [],
        "requestBody": {
          "additionalProperties": false,
          "properties": {
            "name": {
              "type": "string",
            },
          },
          "required": [
            "name",
          ],
          "type": "object",
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "name",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "200 response",
          },
        },
        "security": [
          {
            "BearerAuth": [],
          },
        ],
      },
    },
  },
  "servers": undefined,
}
`;

exports[`generateApiDefinition should generate api definition for http endpoint with request and response body validation but exclude request and response body by config 1`] = `
{
  "components": {
    "securitySchemes": {
      "BearerAuth": {
        "bearerFormat": "JWT",
        "scheme": "bearer",
        "type": "http",
      },
      "FunctionKeyAuth": {
        "in": "header",
        "name": "x-functions-key",
        "type": "apiKey",
      },
    },
  },
  "info": {
    "description": undefined,
    "title": "Test API",
    "version": "1.0.0",
  },
  "openapi": "3.0.2",
  "paths": {
    "/person": {
      "put": {
        "operationId": "http-put-person",
        "parameters": [],
        "requestBody": undefined,
        "responses": {
          "default": {
            "description": "ok",
          },
        },
        "security": [
          {
            "BearerAuth": [],
          },
        ],
      },
    },
  },
  "servers": undefined,
}
`;

exports[`generateApiDefinition should generate api definition for http endpoint with url and query params 1`] = `
{
  "components": {
    "securitySchemes": {
      "BearerAuth": {
        "bearerFormat": "JWT",
        "scheme": "bearer",
        "type": "http",
      },
      "FunctionKeyAuth": {
        "in": "header",
        "name": "x-functions-key",
        "type": "apiKey",
      },
    },
  },
  "info": {
    "description": undefined,
    "title": "Test API",
    "version": "1.0.0",
  },
  "openapi": "3.0.2",
  "paths": {
    "/person/{personId}/order/{orderId}/item": {
      "get": {
        "operationId": "http-get-test",
        "parameters": [
          {
            "in": "path",
            "name": "personId",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
          {
            "in": "path",
            "name": "orderId",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
          {
            "description": undefined,
            "in": "query",
            "name": "status",
            "required": true,
            "schema": {
              "enum": [
                "active",
                "expired",
              ],
              "type": "string",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "default": {
            "description": "ok",
          },
        },
        "security": [
          {
            "FunctionKeyAuth": [],
          },
        ],
      },
    },
  },
  "servers": undefined,
}
`;

exports[`generateApiDefinition should generate api definition for http endpoint without validations 1`] = `
{
  "components": {
    "securitySchemes": {
      "BearerAuth": {
        "bearerFormat": "JWT",
        "scheme": "bearer",
        "type": "http",
      },
      "FunctionKeyAuth": {
        "in": "header",
        "name": "x-functions-key",
        "type": "apiKey",
      },
    },
  },
  "info": {
    "description": undefined,
    "title": "Test API",
    "version": "1.0.0",
  },
  "openapi": "3.0.2",
  "paths": {
    "/test/{id}": {
      "get": {
        "operationId": "http-get-test",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "default": {
            "description": "ok",
          },
        },
        "security": [
          {
            "FunctionKeyAuth": [],
          },
        ],
      },
    },
  },
  "servers": undefined,
}
`;
